; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/tools/extr_bselect.c_main.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/tools/extr_bselect.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ptrc = common dso_local global i32 0, align 4
@ptr = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [3 x i8] c"rb\00", align 1
@active = common dso_local global i32* null, align 8
@activec = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %11 = call i32 @time(i32* null)
  %12 = call i32 @srandom(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = sub nsw i32 %13, 1
  store i32 %14, i32* @ptrc, align 4
  store i32 0, i32* %6, align 4
  br label %15

15:                                               ; preds = %46, %2
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @ptrc, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %49

19:                                               ; preds = %15
  %20 = call i32 @malloc(i32 2048)
  %21 = load i32*, i32** @ptr, align 8
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  store i32 %20, i32* %24, align 4
  %25 = load i8**, i8*** %5, align 8
  %26 = load i32, i32* %6, align 4
  %27 = add nsw i32 %26, 1
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i8*, i8** %25, i64 %28
  %30 = load i8*, i8** %29, align 8
  %31 = call i32* @fopen(i8* %30, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  store i32* %31, i32** %10, align 8
  %32 = load i32*, i32** @ptr, align 8
  %33 = load i32, i32* %6, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %32, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = load i32*, i32** %10, align 8
  %38 = call i32 @fread(i32 %36, i32 1, i32 2048, i32* %37)
  %39 = load i32*, i32** %10, align 8
  %40 = call i32 @fclose(i32* %39)
  %41 = load i32, i32* %6, align 4
  %42 = load i32*, i32** @active, align 8
  %43 = load i32, i32* %6, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  store i32 %41, i32* %45, align 4
  br label %46

46:                                               ; preds = %19
  %47 = load i32, i32* %6, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %6, align 4
  br label %15

49:                                               ; preds = %15
  %50 = load i32, i32* @ptrc, align 4
  store i32 %50, i32* @activec, align 4
  br label %51

51:                                               ; preds = %54, %49
  %52 = load i32, i32* @activec, align 4
  %53 = icmp sgt i32 %52, 0
  br i1 %53, label %54, label %58

54:                                               ; preds = %51
  %55 = call i32 (...) @fill_max()
  %56 = call i32 (...) @select_max()
  %57 = call i32 (...) @search_active()
  br label %51

58:                                               ; preds = %51
  ret i32 0
}

declare dso_local i32 @srandom(i32) #1

declare dso_local i32 @time(i32*) #1

declare dso_local i32 @malloc(i32) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fread(i32, i32, i32, i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @fill_max(...) #1

declare dso_local i32 @select_max(...) #1

declare dso_local i32 @search_active(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
